packages/docs/pages/v2/tutorials/deploy-to-cloud.md
---
title: Deploy to Tome Cloud
description: Publish your documentation site to Tome Cloud with a single command. Includes custom domain setup.
icon: cloud
---

Tome Cloud hosts your documentation site on a global CDN with automatic SSL, custom domains, and analytics. This tutorial covers the full deployment flow.

## Prerequisites

- A Tome documentation project (see [Create your first site](/docs/tutorials/first-site))
- Node.js 22.22.2+

## 1. Authenticate

Log in to your Tome Cloud account:

```bash
npx @tomehq/cli login
```

Enter your email address. You'll receive a magic link — click it to authenticate. Your API token is stored locally for future deployments.

## 2. Deploy

From your project directory:

```bash
npx @tomehq/cli deploy
```

Tome builds your site, collects the output files, and uploads them using hash-based deduplication. Only changed files are transferred, making subsequent deploys fast.

After deployment, your site is live at:

```
https://your-project.tome.center
```

## 3. Add a custom domain

Register a custom domain for your docs:

```bash
npx @tomehq/cli domains:add docs.example.com
```

Tome returns DNS records you need to configure with your domain registrar:

```text
Type:  CNAME
Name:  docs
Value: your-project.tome.center
```

After configuring DNS, verify the domain:

```bash
npx @tomehq/cli domains:verify docs.example.com
```

SSL is provisioned automatically once DNS propagates.

## 4. Manage domains

List all domains attached to your project:

```bash
npx @tomehq/cli domains:list
```

Remove a domain:

```bash
npx @tomehq/cli domains:remove docs.example.com
```

## 5. Automatic deploys with CI/CD

Projects created with `tome init` include a GitHub Actions workflow (`.github/workflows/deploy.yml`) that deploys automatically:

- **Push to main** → production deploy
- **Pull requests** → preview deploy with a unique URL

### Setup

1. Generate a deploy token by running `npx @tomehq/cli login`, then copy the token from `~/.tome/config`
2. In your GitHub repository, go to **Settings → Secrets and variables → Actions**
3. Create a secret named `TOME_TOKEN` with your deploy token

That's it — every push to `main` triggers a production deploy, and every PR gets a preview URL.

### GitLab CI

Create `.gitlab-ci.yml`:

```yaml
deploy:
  image: node:20
  script:
    - npm ci
    - npm run build
    - npx @tomehq/cli deploy
  only:
    - main
  variables:
    TOME_TOKEN: $TOME_TOKEN
```

Add `TOME_TOKEN` in **Settings → CI/CD → Variables**.

### Bitbucket Pipelines

Add to `bitbucket-pipelines.yml`:

```yaml
pipelines:
  branches:
    main:
      - step:
          name: Deploy docs
          image: node:20
          script:
            - npm ci
            - npm run build
            - npx @tomehq/cli deploy
```

Add `TOME_TOKEN` in **Repository settings → Pipelines → Variables**.

## Deployment details

Each deploy creates an immutable snapshot. You can view deployment history and analytics in the Tome Dashboard.

| Detail | Value |
|--------|-------|
| CDN | Cloudflare R2 (global edge) |
| SSL | Automatic via Cloudflare |
| Deduplication | Content-hash based |
| Rollback | Deploy any previous snapshot |

## Next steps

- **[Configuration guide](/docs/guides/configuration)** to customize your site before deploying
- **[CLI reference](/docs/reference/cli)** for the full list of deployment commands
